# py_wx_key

./: .gitignore  README.md  diagnose_tool.cpp  diagnose_wx_key.py
.github/workflows/: build.yml
include/: remote_scanner.h
packaging/: setup.py
packaging/wx_key/: README.md  __init__.py
py_wx_key/: CMakeLists.txt
py_wx_key/include/: hook_controller.h  ipc_manager.h  remote_memory.h  remote_scanner.h  shellcode_builder.h
py_wx_key/src/: hook_controller.cpp  ipc_manager.cpp  pybind_wrapper.cpp  remote_hooker.cpp  remote_scanner.cpp  shellcode_builder.cpp  syscalls.cpp
scripts/: README.md  demo.py  idaFindImgKey.py  idaFindPattern.py  test_all.py  test_hybrid.py
src/: pybind_wrapper.cpp  remote_veh.cpp
